refactored code for phonedb,gsmarena,phonemore,devicespecifications - it donot have extracted content for phonemore and devicespecs, rest two particular content would be extracted
